//
//  HomeModel.swift
//  MeliApp
//
//  Created by Luis Alejandro Barbosa Lee on 30/03/22.
//  Copyright (c) 2022 Luis Alejandro Barbosa Lee. All rights reserved.

import UIKit

struct HomeModel {

	struct Constants {
		static let welcome = "¡Bienvenido!"
        static let info = "Conoce mi información"
        static let name = "Alejandro Barbosa"
        static let description = "iOS Developer\nalejobarbosalee@gmail.com"
        static let start = "Empezar"
	}
}
