...
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <searchBar contentMode="redraw" placeholder="Buscar en Mercado Libre" translatesAutoresizingMaskIntoConstraints="NO" id="s9n-bt-eES">
                    <rect key="frame" x="0.0" y="0.0" width="375" height="51"/>
                    <textInputTraits key="textInputTraits"/>
                </searchBar>
                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="d4f-SZ-bDG">
                    <rect key="frame" x="0.0" y="51" width="375" height="616"/>
                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
...
